Plot the data and look at column contents

--- a/TitanicKaggleTutorial.ipynb
+++ b/TitanicKaggleTutorial.ipynb
@@ -141,8 +141,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b9f98989",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "871c2714",
+   "id": "3c896d23",
    "metadata": {},
    "source": [
     "## The data\n",
@@ -152,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "5a8241e7",
+   "execution_count": 41,
+   "id": "ed17be9f",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +311,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +323,113 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "58985a79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The survived column is a boolean with values: {0, 1}'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"The survived column is a boolean with values: {set(df['Survived'].unique())}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "588dba03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Pclass column represents the class of the ticket with values: {1, 2, 3}'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"The Pclass column represents the class of the ticket with values: {set(df['Pclass'].unique())}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "bf4f7f77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The SidSp column takes values: {0, 1, 2, 3, 4, 5, 8}'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"The SidSp column takes values: {set(df['SibSp'].unique())}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f1772b73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Parch column takes values: {0, 1, 2, 3, 4, 5, 6}'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"The Parch column takes values: {set(df['Parch'].unique())}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "829d1096",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The Embarked column takes values: {'Q', 'C', 'S'}\""
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"The Embarked column takes values: {set(df['Embarked'].dropna().unique())}\""
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "832270c5",
+   "id": "f59900d3",
    "metadata": {},
    "source": [
     "## Missing values"
@@ -322,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1c331bf",
+   "id": "12b2f0a9",
    "metadata": {},
    "source": [
     "One thing we want to watch out for is how complete our dataset is. First, let's have a look at the number of rows and how many entries are non-null."
@@ -331,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "48ee60cf",
+   "id": "5d5f014a",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff3bae3e",
+   "id": "c8bcc109",
    "metadata": {},
    "source": [
     "Clearly we can see that _Cabin_ in particular has a significant number of entries missing. How can we deal with that? At this point it's probably worth just removing it from our dataset."
@@ -373,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5278e0ff",
+   "id": "2ccb7bfa",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9f2f59",
+   "id": "56f3c931",
    "metadata": {},
    "source": [
     "Now that we're removed _Cabin_ we're safe to drop all remaining NaN values. If we'd ran this line first our dataset would have been ~23% of it's original size!"
@@ -529,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "535599a8",
+   "id": "c052fc6f",
    "metadata": {},
    "outputs": [
     {
@@ -550,11 +665,71 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e56b1e7",
+   "id": "396dfcc0",
    "metadata": {},
    "source": [
     "## Exploring the data visually"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efa0bc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# specifies the parameters of our graphs\n",
+    "fig = plt.figure(figsize=(18,6), dpi=1600) \n",
+    "alpha=alpha_scatterplot = 0.2 \n",
+    "alpha_bar_chart = 0.55\n",
+    "\n",
+    "# lets us plot many diffrent shaped graphs together \n",
+    "ax1 = plt.subplot2grid((2,3),(0,0))\n",
+    "# plots a bar graph of those who surived vs those who did not.               \n",
+    "df.Survived.value_counts().plot(kind='bar', alpha=alpha_bar_chart)\n",
+    "# this nicely sets the margins in matplotlib to deal with a recent bug 1.3.1\n",
+    "ax1.set_xlim(-1, 2)\n",
+    "# puts a title on our graph\n",
+    "plt.title(\"Distribution of Survival, (1 = Survived)\")    \n",
+    "\n",
+    "plt.subplot2grid((2,3),(0,1))\n",
+    "plt.scatter(df.Survived, df.Age, alpha=alpha_scatterplot)\n",
+    "# sets the y axis lable\n",
+    "plt.ylabel(\"Age\")\n",
+    "# formats the grid line style of our graphs                          \n",
+    "plt.grid(b=True, which='major', axis='y')  \n",
+    "plt.title(\"Survival by Age,  (1 = Survived)\")\n",
+    "\n",
+    "ax3 = plt.subplot2grid((2,3),(0,2))\n",
+    "df.Pclass.value_counts().plot(kind=\"barh\", alpha=alpha_bar_chart)\n",
+    "ax3.set_ylim(-1, len(df.Pclass.value_counts()))\n",
+    "plt.title(\"Class Distribution\")\n",
+    "\n",
+    "plt.subplot2grid((2,3),(1,0), colspan=2)\n",
+    "# plots a kernel density estimate of the subset of the 1st class passangers's age\n",
+    "df.Age[df.Pclass == 1].plot(kind='kde')    \n",
+    "df.Age[df.Pclass == 2].plot(kind='kde')\n",
+    "df.Age[df.Pclass == 3].plot(kind='kde')\n",
+    " # plots an axis lable\n",
+    "plt.xlabel(\"Age\")    \n",
+    "plt.title(\"Age Distribution within classes\")\n",
+    "# sets our legend for our graph.\n",
+    "plt.legend(('1st Class', '2nd Class','3rd Class'),loc='best') \n",
+    "\n",
+    "ax5 = plt.subplot2grid((2,3),(1,2))\n",
+    "df.Embarked.value_counts().plot(kind='bar', alpha=alpha_bar_chart)\n",
+    "ax5.set_xlim(-1, len(df.Embarked.value_counts()))\n",
+    "# specifies the parameters of our graphs\n",
+    "plt.title(\"Passengers per boarding location\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7399964a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
